# brave-core

./: BUILD.gn  DEPS  package-lock.json  package.json
app/: brave_generated_resources.grd
browser/: BUILD.gn  brave_profile_prefs.cc
browser/brave_rewards/: donations_dialog.cc  donations_dialog.h
browser/extensions/: brave_extension_provider.cc
browser/extensions/api/: brave_rewards_api.cc  brave_rewards_api.h  brave_sync_api.cc
browser/ui/webui/: brave_md_settings_ui.cc  brave_rewards_ui.cc  brave_webui_source.cc
common/extensions/api/: brave_rewards.json
components/brave_ads/browser/: ads_service_impl_unittest.cc
components/brave_extension/extension/brave_extension/: braveShieldsPanel.tsx
components/brave_rewards/browser/: publisher_info_database.cc  publisher_info_database.h  publisher_info_database_unittest.cc  rewards_service.h  rewards_service_impl.cc  rewards_service_impl.h
components/brave_rewards/resources/donate/: BUILD.gn  brave_donate.tsx
components/brave_rewards/resources/donate/components/: app.tsx
components/brave_rewards/resources/ui/: brave_rewards.tsx
components/brave_sync/: brave_sync_prefs.cc  brave_sync_prefs.h  brave_sync_service_impl.cc
components/definitions/: chromel.d.ts  rewardsDonate.d.ts  rewardsExtensions.d.ts
components/resources/: brave_components_strings.grd
components/services/bat_ledger/: bat_ledger_impl.cc  bat_ledger_impl.h
patches/: chrome-VERSION.patch  chrome-browser-ui-views-profiles-profile_chooser_view.cc.patch  net-socket-socks5_client_socket.h.patch
test/: BUILD.gn
(+10 files in other folders)
