import("//brave/components/common/typescript.gni")

transpile_web_ui("donate") {
  inputs = [
    "actions/donate_actions.ts",
    "brave_donate.html",
    "brave_donate.tsx",
    "components/app.tsx",
    "components/donateToSite.tsx",
    "components/donateToTwitterUser.tsx",
    "components/siteBanner.tsx",
    "components/transientDonationOverlay.tsx",
    "constants/donate_types.ts",
    "reducers/donate_reducer.ts",
    "reducers/index.ts",
    "store.ts",
    "utils.ts",
  ]

  entry_points = [
    ["brave_donate", rebase_path("brave_donate.tsx")]
  ]

  resource_name = "brave_donate"
}
